@@ -1,4 +1,0 @@
-#!/bin/sh
-mdb -nsim -noproject -nooptions -run $*
-RET=$?
-echo "*** EXIT code ${RET}"
